# prolly

./: .gitignore  Cargo.toml  README.md  docker-compose.store-services.yml
benchmarks/local-store-publication/: Cargo.toml
benchmarks/local-store-publication/src/: main.rs  model.rs  sync_runner.rs  turso_runner.rs
benchmarks/postgres-scale/: Cargo.toml  docker-compose.yml
benchmarks/postgres-scale/src/: cli.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  postgres.rs  workloads.rs
benchmarks/redb-correctness/: Cargo.toml  README.md
benchmarks/redb-correctness/src/: main.rs
benchmarks/redb-sqlite-1m/: Cargo.toml  README.md  run-matrix.sh
benchmarks/redb-sqlite-1m/src/: main.rs
benchmarks/redis-scale/: Cargo.toml  docker-compose.yml  redis.conf
benchmarks/redis-scale/src/: cli.rs  fixture.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  redis_runner.rs  report.rs
benchmarks/redis-scale/tests/: matrix.rs  measurement_fixture.rs  model_cli.rs
benchmarks/sqlite-prolly-patterns/: Cargo.toml
benchmarks/sqlite-prolly-patterns/src/: cli.rs  fixture.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  report.rs  sqlite_runner.rs
benchmarks/sqlite-prolly-patterns/tests/: matrix.rs  measurement_fixture.rs  model_cli.rs  sqlite_smoke.rs
benchmarks/sqlite-scale/: Cargo.toml
benchmarks/sqlite-scale/src/: cli.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  report.rs  sqlite_runner.rs
benchmarks/sqlite-scale/tests/: harness_resume.rs  matrix.rs  measurement_fixture.rs  model_cli.rs  sqlite_smoke.rs
benchmarks/sqlite-turso-local/: Cargo.toml
benchmarks/sqlite-turso-local/src/: cli.rs  fixture.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  sqlite_runner.rs  turso_runner.rs
benchmarks/sqlite-turso-local/tests/: local_smoke.rs
benchmarks/turso-scale/: Cargo.toml
benchmarks/turso-scale/src/: cli.rs  fixture.rs  harness.rs  lib.rs  main.rs  measurement.rs  model.rs  report.rs  turso_runner.rs
benchmarks/turso-scale/tests/: harness_resume.rs  matrix.rs  measurement_fixture.rs  model_cli.rs  turso_smoke.rs
bindings/node/native/: Cargo.toml  README.md
bindings/node/native/src/: lib.rs  portable.rs  remote_store.rs
bindings/python/stores/cosmosdb/: README.md  pyproject.toml
bindings/python/stores/cosmosdb/prolly_store_cosmosdb/: __init__.py
bindings/python/stores/cosmosdb/tests/: test_cosmosdb_store.py
bindings/python/stores/dynamodb/: README.md  pyproject.toml
bindings/python/stores/dynamodb/prolly_store_dynamodb/: __init__.py
bindings/python/stores/postgres/: README.md  pyproject.toml
bindings/python/stores/redis/: README.md  pyproject.toml
bindings/python/stores/spanner/: README.md  pyproject.toml
bindings/uniffi/: Cargo.toml  README.md  uniffi.toml
bindings/uniffi/src/: async_store.rs  fast_abi.rs  lib.rs  publication.rs
bindings/uniffi/src/domain/: error.rs  handle.rs  indexed.rs  mod.rs  page.rs  proximity.rs  versioned.rs
bindings/wasm/: COOKBOOK.md  Cargo.toml  PROVENANCE.md  README.md  package.json
bindings/wasm/examples/: agent-event-log.ts  background-compaction.ts  basic-map.ts  batch-build.ts  browser-storage.ts  conversation-memory.ts  deterministic-rag-snapshot.ts  diff-merge.ts  document-chunk-index.ts  file-blob-store.ts  local-first-state.ts  materialized-view.ts  provenance-values.ts  resolver.ts  secondary-index.ts  vector-sidecar.ts
bindings/wasm/src/: domain.rs  index.ts  indexed.rs  lib.rs  page.rs  proximity.rs  remote-store.ts
bindings/wasm/stores/indexeddb/: README.md  package-lock.json  package.json
bindings/wasm/stores/opfs/: README.md  package-lock.json  package.json  tsconfig.json
bindings/wasm/stores/pglite/: README.md  package-lock.json  package.json
bindings/wasm/test/: portable-parity.test.ts  remote-store.test.ts  wasm.test.ts
stores/prolly-store-cosmosdb/: Cargo.toml  README.md
stores/prolly-store-cosmosdb/src/: lib.rs
stores/prolly-store-cosmosdb/tests/: cosmosdb_backend.rs
stores/prolly-store-dynamodb/: Cargo.toml  README.md
stores/prolly-store-dynamodb/examples/: basic_usage.rs  language_interop.rs
stores/prolly-store-dynamodb/src/: lib.rs
stores/prolly-store-mysql/: Cargo.toml  README.md
stores/prolly-store-mysql/examples/: basic_usage.rs  language_interop.rs
stores/prolly-store-mysql/src/: lib.rs
stores/prolly-store-pglite/: Cargo.toml  README.md
stores/prolly-store-pglite/benches/: pglite_scale_bench.rs
stores/prolly-store-pglite/src/: lib.rs
stores/prolly-store-pglite/tests/: pglite_store.rs
stores/prolly-store-redb/: Cargo.toml  README.md
stores/prolly-store-redb/examples/: basic_usage.rs
stores/prolly-store-redb/src/: lib.rs
stores/prolly-store-redb/tests/: redb_store.rs
stores/prolly-store-redis/: Cargo.toml  README.md
stores/prolly-store-redis/examples/: basic_usage.rs  language_interop.rs
stores/prolly-store-redis/src/: lib.rs
stores/prolly-store-rocksdb/: Cargo.toml  README.md
stores/prolly-store-rocksdb/src/: lib.rs
stores/prolly-store-rocksdb/tests/: rocksdb_store.rs
stores/prolly-store-slatedb/: Cargo.toml  README.md
stores/prolly-store-slatedb/benches/: slatedb_derived_scale_bench.rs  slatedb_ops_bench.rs  slatedb_scale_bench.rs  slatedb_workload_bench.rs
stores/prolly-store-slatedb/src/: lib.rs
stores/prolly-store-slatedb/tests/: slatedb_store.rs
stores/prolly-store-spanner/: Cargo.toml  README.md
stores/prolly-store-spanner/src/: lib.rs
stores/prolly-store-sqlite/: Cargo.toml  README.md
stores/prolly-store-sqlite/benches/: sqlite_scale_bench.rs  sqlite_workload_bench.rs  sqlite_workload_support.rs
stores/prolly-store-sqlite/examples/: language_interop.rs  semantic_rag.rs
stores/prolly-store-sqlite/examples/data/: semantic_rag_embeddings.json
stores/prolly-store-sqlite/src/: lib.rs
stores/prolly-store-sqlite/tests/: sqlite_store.rs  sqlite_workload_support.rs
stores/prolly-store-turso/: Cargo.toml  README.md
stores/prolly-store-turso/examples/: basic_usage.rs
stores/prolly-store-turso/src/: lib.rs
stores/prolly-store-turso/tests/: turso_backend.rs
(+7242 files in other folders)
