[package]
name = "prolly-map"
description = "Content-addressed versioned map storage primitives."
readme = "README.md"
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-map"
keywords = [
    "prolly-tree",
    "versioned-map",
    "content-addressed",
    "local-first",
    "merge",
]
categories = ["data-structures", "database-implementations"]
exclude = ["docker-compose.store-services.yml", "scripts/", "stores/"]

[lib]
name = "prolly"
path = "src/lib.rs"

[features]
default = []
async-store = ["dep:futures-util"]
pglite = ["dep:hex"]
rocksdb = ["dep:rocksdb"]
slatedb = ["dep:futures-util", "dep:slatedb", "dep:tokio"]
sqlite = ["dep:rusqlite"]
tokio = ["async-store", "dep:tokio"]

[dependencies]
futures-util = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
rayon = "1.10"
rocksdb = { version = "0.22", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
slatedb = { version = "0.14.0", optional = true }
tokio = { version = "1.45", features = ["rt-multi-thread", "time"], optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
futures-util = "0.3"

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "prolly_bench"
harness = false

[[bench]]
name = "ai_workloads_bench"
harness = false

[[bench]]
name = "sqlite_scale_bench"
harness = false
required-features = ["sqlite"]

[[bench]]
name = "pglite_scale_bench"
harness = false
required-features = ["pglite"]

[[bench]]
name = "store_diff_merge_bench"
harness = false

[[bench]]
name = "slatedb_scale_bench"
harness = false
required-features = ["slatedb"]

[[bench]]
name = "slatedb_ops_bench"
harness = false
required-features = ["slatedb"]

[[bench]]
name = "slatedb_workload_bench"
harness = false
required-features = ["slatedb"]
