[package]
name = "prolly-map"
description = "Content-addressed versioned map storage primitives."
readme = "README.md"
edition = "2021"
rust-version = "1.81"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-map"
keywords = [
    "prolly-tree",
    "versioned-map",
    "content-addressed",
    "local-first",
    "merge",
]
categories = ["data-structures", "database-implementations"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "benches/**",
    "conformance/prolly-fixtures.v1.json",
    "conformance/proximity-fixtures.json",
    "diagram/**",
    "docs/**/*.md",
    "examples/**",
    "src/**",
    "tests/**",
]

[lib]
name = "prolly"
path = "src/lib.rs"

[features]
default = []
# Compatibility spelling. Async traits and the async-first engine are unconditional.
async-store = []
tokio = ["dep:tokio"]

[dependencies]
futures-util = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["rt-multi-thread", "time"], optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
futures-util = "0.3"
libc = "0.2"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.103"

[target.'cfg(all(target_arch = "aarch64", not(target_os = "windows")))'.dependencies]
# sha2 0.10 gates its ARMv8 SHA-256 implementation behind this feature.
# Keep it target-specific; sha2-asm does not support Windows, and WASM plus
# unsupported architectures must retain the portable implementation.
sha2 = { version = "0.10", features = ["asm-aarch64"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "=0.1.52"

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "prolly_bench"
harness = false

[[bench]]
name = "ai_workloads_bench"
harness = false

[[bench]]
name = "store_diff_merge_bench"
harness = false

[[bench]]
name = "secondary_index_bench"
harness = false

[[bench]]
name = "proximity_bench"
harness = false

[[bench]]
name = "scale_workloads"
harness = false

[[bench]]
name = "async_first_foundation_bench"
harness = false
