[package]
name = "prolly-redis-scale-bench"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
publish = false

[workspace]

[dependencies]
csv = "1.3"
fs2 = "0.4"
prolly = { package = "prolly-map", path = "../..", features = ["async-store"] }
prolly-store-redis = { path = "../../stores/prolly-store-redis" }
redis-client = { package = "redis", version = "0.32.7", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "prolly-redis-scale-bench"
path = "src/main.rs"
