[package]
name = "prolly-sqlite-pattern-bench"
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
csv = "1.3"
prolly = { package = "prolly-map", path = "../.." }
prolly-store-sqlite = { path = "../../stores/prolly-store-sqlite" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"

[lints.rust]
unsafe_code = "forbid"
