[package]
name = "prolly-sqlite-scale-bench"
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
publish = false

[workspace]

[dependencies]
csv = "1.3"
fs2 = "0.4"
prolly = { package = "prolly-map", path = "../.." }
prolly-store-sqlite = { path = "../../stores/prolly-store-sqlite" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "prolly-sqlite-scale-bench"
path = "src/main.rs"
