[package]
name = "prolly-sqlite-turso-local-bench"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
csv = "1.3"
fs2 = "0.4"
prolly = { package = "prolly-map", path = "../..", features = ["async-store"] }
prolly-store-sqlite = { path = "../../stores/prolly-store-sqlite" }
prolly-store-turso = { path = "../../stores/prolly-store-turso" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

