[package]
name = "prolly-turso-scale-bench"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
publish = false

[workspace]

[dependencies]
csv = "1.3"
fs2 = "0.4"
prolly = { package = "prolly-map", path = "../..", features = ["async-store"] }
prolly-store-turso = { path = "../../stores/prolly-store-turso" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "prolly-turso-scale-bench"
path = "src/main.rs"
