[package]
name = "prolly-bindings"
description = "UniFFI bindings for prolly-map"
readme = "README.md"
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_bindings"
crate-type = ["cdylib", "staticlib", "rlib"]
doc = false
bench = false

[features]
default = ["sqlite"]
sqlite = ["dep:prolly-store-sqlite"]

[dependencies]
prolly-map = { path = "../..", features = ["async-store"] }
prolly-store-sqlite = { path = "../../stores/prolly-store-sqlite", optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uniffi = "=0.31.0"

[dev-dependencies]
hex = "0.4"

[lints.rust]
unsafe_code = "allow"
