[package]
name = "prolly-wasm"
description = "Browser WASM bindings for prolly-map"
readme = "README.md"
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doc = false
bench = false

[dependencies]
prolly-map = { path = "../.." }
js-sys = "0.3.103"
serde_json = "1.0"
wasm-bindgen = "0.2.126"

[lints.rust]
unsafe_code = "allow"
