[package]
name = "prolly-store-cosmosdb"
description = "Cosmos DB store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-cosmosdb"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "cosmosdb"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_cosmosdb"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
hex = "0.4"
hmac = "0.12.1"
httpdate = "1.0.3"
percent-encoding = "2.3.2"
prolly = { package = "prolly-map", path = "../..", version = "0.5.0", features = ["async-store"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[[example]]
name = "cosmosdb_basic_usage"
path = "examples/basic_usage.rs"

[lints.rust]
unsafe_code = "allow"
