[package]
name = "prolly-store-dynamodb"
description = "DynamoDB store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.2.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-dynamodb"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "dynamodb"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_dynamodb"
path = "src/lib.rs"

[dependencies]
aws-credential-types = "=1.2.14"
aws-runtime = "=1.7.5"
aws-sdk-dynamodb = "=1.73.0"
aws-sigv4 = "=1.4.5"
aws-smithy-async = "=1.2.14"
aws-smithy-http = "=0.63.6"
aws-smithy-http-client = "=1.1.13"
aws-smithy-observability = "=0.2.6"
aws-smithy-runtime = "=1.11.3"
aws-smithy-runtime-api = "=1.12.3"
aws-smithy-runtime-api-macros = "=1.0.0"
aws-smithy-schema = "=0.1.0"
aws-smithy-types = "=1.5.0"
aws-types = "=1.3.16"
prolly = { package = "prolly-map", path = "../..", version = "0.4.0", features = ["async-store"] }

[dev-dependencies]
aws-config = { version = "=1.5.18", features = ["behavior-version-latest"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[[example]]
name = "dynamodb_basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "language_interop"
path = "examples/language_interop.rs"

[lints.rust]
unsafe_code = "allow"
