[package]
name = "prolly-store-mysql"
description = "MySQL store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_mysql"
path = "src/lib.rs"

[dependencies]
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "allow"
