[package]
name = "prolly-store-mysql"
description = "MySQL store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-mysql"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "mysql"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_mysql"
path = "src/lib.rs"

[dependencies]
prolly = { package = "prolly-map", path = "../..", version = "0.4.0", features = ["async-store"] }
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[[example]]
name = "mysql_basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "language_interop"
path = "examples/language_interop.rs"

[lints.rust]
unsafe_code = "allow"
