[package]
name = "prolly-store-pglite"
description = "PGlite sidecar store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-pglite"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "pglite"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_pglite"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
prolly = { package = "prolly-map", path = "../..", version = "0.3.0" }
serde_json = "1.0"

[dev-dependencies]
prolly-store-test = { path = "../prolly-store-test" }

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "pglite_scale_bench"
harness = false
