[package]
name = "prolly-store-redis"
description = "Redis store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_redis"
path = "src/lib.rs"

[dependencies]
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }
redis-client = { package = "redis", version = "0.32.7", default-features = false, features = [
    "aio",
    "tokio-comp",
    "connection-manager",
    "script",
] }

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[[example]]
name = "redis_basic_usage"
path = "examples/basic_usage.rs"

[lints.rust]
unsafe_code = "allow"
