[package]
name = "prolly-store-slatedb"
description = "SlateDB store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-slatedb"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "slatedb"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_slatedb"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3"
prolly = { package = "prolly-map", path = "../..", version = "0.3.0" }
slatedb = "0.14.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
prolly-store-test = { path = "../prolly-store-test" }

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "slatedb_scale_bench"
harness = false

[[bench]]
name = "slatedb_ops_bench"
harness = false

[[bench]]
name = "slatedb_workload_bench"
harness = false
