[package]
name = "prolly-store-spanner"
description = "Cloud Spanner store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-spanner"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "spanner"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_spanner"
path = "src/lib.rs"

[dependencies]
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3.0", features = ["spanner"] }
google-cloud-spanner = { package = "gcloud-spanner", version = "=1.8.1" }
prolly = { package = "prolly-map", path = "../..", version = "0.3.0", features = ["async-store"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }

[[example]]
name = "spanner_basic_usage"
path = "examples/basic_usage.rs"

[lints.rust]
unsafe_code = "allow"
