[package]
name = "prolly-store-sqlite"
description = "SQLite store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-sqlite"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "sqlite"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_sqlite"
path = "src/lib.rs"

[dependencies]
prolly = { package = "prolly-map", path = "../..", version = "0.3.0" }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
prolly-store-test = { path = "../prolly-store-test" }

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "sqlite_scale_bench"
harness = false
