[package]
name = "prolly-store-sqlite"
description = "SQLite store adapter for prolly-map."
edition = "2021"
rust-version = "1.81"
version = "0.3.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
documentation = "https://docs.rs/prolly-store-sqlite"
readme = "README.md"
keywords = ["prolly-tree", "storage", "database", "sqlite"]
categories = ["database-implementations"]

[lib]
name = "prolly_store_sqlite"
path = "src/lib.rs"

[dependencies]
lru = "0.12"
lz4_flex = "0.11"
parking_lot = "0.12"
prolly = { package = "prolly-map", path = "../..", version = "0.5.1" }
rusqlite = { version = "0.31", features = ["backup", "bundled"] }

[dev-dependencies]
prolly-store-test = { path = "../prolly-store-test" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "sqlite_scale_bench"
harness = false

[[bench]]
name = "sqlite_workload_bench"
harness = false
