[package]
name = "prolly-node-native"
description = "Node-API bindings for prolly-map"
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/prolly"
homepage = "https://github.com/crabbuild/prolly"
publish = false

[lib]
crate-type = ["cdylib"]
doc = false
bench = false

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
napi-derive = "2.16"
prolly-bindings = { path = "../../uniffi" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
send_wrapper = "0.6"
tokio = { version = "1", features = ["rt", "sync"] }

[build-dependencies]
napi-build = "2.2"

[lints.rust]
unsafe_code = "allow"
