[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-prolly-store-redis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["trail-prolly-binding==0.1.0", "redis==8.0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["prolly_store_redis*"]
